--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,13 +12,22 @@
     --color-grey-dark-3: #333;
     --color-grey-dark-4: #222;
 
-    --color-dark: #15202b;
-    --color-dark-light: #253341;
+    // --color-dark: #0a192f;
+    // --color-dark-light: #172a45;
+    // --color-dark-light-2: #6888a5;
+    // --color-dark-darker: rgb(15, 23, 31);
+    --color-dark: #121f2c;
+    --color-dark-light: rgb(36, 53, 73);
     --color-dark-light-2: #6888a5;
-    --color-dark-darker: #131d27;
+    --color-dark-darker: rgb(15, 23, 31);
+    // --color-dark: #15202b;
+    // --color-dark-light: #253341;
+    // --color-dark-light-2: #6888a5;
+    // --color-dark-darker: #131d27;
 
     --color-white: #fff;
-    --color-white-alternate: #f6f8fa;
+    --color-white-main: #cfd9fa;
+    --color-white-alternate: #8b96b4;
 
     --color-link: #0366d6;
     --color-error: #ff5252;
