--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,7 +11,7 @@ body {
     font-weight: 400;
     font-size: var(--default-font-size);
     line-height: 1.7;
-    color: var(--color-grey-dark-4);
+    color: var(--color-white-main);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
