Added footer and favicons

--- a/src/pages/User/UserStyles.scss
+++ b/src/pages/User/UserStyles.scss
@@ -19,4 +19,8 @@
         background-color: var(--color-dark);
         min-height: 50vh;
     }
+    &__footer {
+        padding: 6rem 0 3rem;
+        background-color: var(--color-dark);
+    }
 }
