--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -16,4 +16,10 @@
 
     // BORDER-RADIUS
     --border-radius: 10px;
+
+    // GRID
+    --grid-width: calc(130rem - var(--number-of-columns) * var(--grid-gap));
+    --number-of-columns: 16;
+    --grid-gap: 2rem;
+    --grid-gap-mobile: 1.5rem;
 }
