--- a/src/components/Footer/FooterStyles.scss
+++ b/src/components/Footer/FooterStyles.scss
@@ -3,6 +3,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
 
         a {
             font-weight: 600;
