--- a/src/components/RepoCorner/RepoCornerStyles.scss
+++ b/src/components/RepoCorner/RepoCornerStyles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/media-queries';
+
 .github-corner {
     position: absolute;
     top: 0;
@@ -18,6 +20,11 @@
 
         .octo-arm {
             transform-origin: 130px 106px;
+        }
+
+        @include mediaQuery(bp-800) {
+            height: 8rem;
+            width: 8rem;
         }
     }
 }
