--- a/src/components/RepoItem/ReposItemStyles.scss
+++ b/src/components/RepoItem/ReposItemStyles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/media-queries';
+
 .repo-item {
     padding: 1.8rem;
     height: 22rem;
@@ -12,6 +14,10 @@
     grid-gap: 0.8rem;
     align-content: space-between;
     transition: all 0.2s;
+
+    @include mediaQuery(bp-600) {
+        grid-template-rows: min-content minmax(8rem, min-content) repeat(2, min-content);
+    }
 
     &:hover,
     &:focus {
