--- a/src/components/Repos/ReposStyles.scss
+++ b/src/components/Repos/ReposStyles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/media-queries';
+
 .repos {
     grid-column: center-start / center-end;
 
@@ -123,6 +125,10 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
         grid-auto-flow: row;
-        grid-gap: 2rem;
+        grid-gap: var(--grid-gap);
+
+        @include mediaQuery(bp-600) {
+            grid-gap: var(--grid-gap-mobile);
+        }
     }
 }
