--- a/src/components/Stats/StatsStyles.scss
+++ b/src/components/Stats/StatsStyles.scss
@@ -1,16 +1,22 @@
+@import '../../styles/media-queries';
+
 .stats {
     --chart-container-width: 42rem;
 
     grid-column: col-start 6 / center-end;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(var(--chart-container-width), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
     grid-template-rows: repeat(auto-fill, min-content);
     justify-items: center;
     align-items: start;
     justify-content: center;
     align-content: start;
-    grid-gap: 2rem;
+    grid-gap: var(--grid-gap);
     margin-top: 2px;
+
+    @include mediaQuery(bp-1000) {
+        grid-gap: var(--grid-gap-mobile);
+    }
 
     &__spinner {
         display: flex;
@@ -24,23 +30,35 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-color: var(--color-dark-light);
-        border-radius: var(--border-radius);
-        border: 1px solid var(--color-dark-light);
-        padding: 2.5rem 2rem;
         width: 100%;
 
-        &__container {
-            width: var(--chart-container-width);
-            min-height: 30rem;
-            padding: 0rem 2rem;
+        @include mediaQuery(bp-600) {
+            width: 50rem;
+        }
+        @include mediaQuery(bp-420) {
+            width: 100%;
         }
 
-        &__heading {
-            display: inline-block;
-            margin-bottom: 3rem;
-            border-bottom: var(--dashed-line-light);
-            font-size: 2.2rem;
+        &__container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            min-height: 30rem;
+            background-color: var(--color-dark-light);
+            border-radius: var(--border-radius);
+            border: 1px solid var(--color-dark-light);
+            padding: 2.5rem 2rem;
+            width: 100%;
+            max-width: 50rem;
+            position: relative;
+
+            &__heading {
+                display: inline-block;
+                margin-bottom: 3rem;
+                border-bottom: var(--dashed-line-light);
+                font-size: 2.2rem;
+            }
         }
     }
 }
