--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/media-queries';
+
 .home {
     display: flex;
     flex-direction: column;
@@ -45,6 +47,11 @@
             border: 0;
             color: var(--color-primary-light);
             transition: var(--transition);
+
+            @include mediaQuery(bp-1000) {
+                min-width: 40rem;
+                width: 60vw;
+            }
 
             &::placeholder {
                 font-family: var(--mono-font-family);
