--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@import '../styles/media-queries';
+
 *,
 *::after,
 *::before {
@@ -7,8 +9,15 @@
 }
 
 html {
-    font-size: 62.5%; // 1rem = 10px
+    font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
     box-sizing: border-box;
+
+    @include mediaQuery(bp-1000) {
+        font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    }
+    @include mediaQuery(bp-600) {
+        font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    }
 }
 
 ul,
