--- a/src/components/Stats/StatsStyles.scss
+++ b/src/components/Stats/StatsStyles.scss
@@ -18,6 +18,12 @@
         grid-gap: var(--grid-gap-mobile);
     }
 
+    @include mediaQuery(bp-600) {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
     &__spinner {
         display: flex;
         justify-content: center;
@@ -32,13 +38,6 @@
         flex-direction: column;
         width: 100%;
 
-        @include mediaQuery(bp-600) {
-            width: 50rem;
-        }
-        @include mediaQuery(bp-420) {
-            width: 100%;
-        }
-
         &__container {
             display: flex;
             align-items: center;
@@ -52,6 +51,10 @@
             width: 100%;
             max-width: 50rem;
             position: relative;
+
+            @include mediaQuery(bp-600) {
+                max-width: 75rem;
+            }
 
             &__heading {
                 display: inline-block;
