--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -54,7 +54,6 @@
     &__random {
         @include mediaQuery(bp-800) {
             margin-left: 1.5rem;
-            margin-top: 1.5rem;
         }
     }
 
@@ -62,10 +61,10 @@
         &__search-expand {
             position: relative;
             overflow: hidden;
+            transition: var(--transition);
 
             @include mediaQuery(bp-800) {
                 margin-left: 1.5rem;
-                margin-top: 1.5rem;
             }
 
             svg {
@@ -78,7 +77,6 @@
             }
 
             &--active {
-                transition: var(--transition);
                 width: var(--expanded-width);
                 justify-content: space-between;
                 background-color: var(--color-primary-dark);
@@ -92,6 +90,7 @@
 
             &__input {
                 opacity: 0;
+                visibility: hidden;
                 background-color: rgba(0, 0, 0, 0);
                 font-family: var(--mono-font-family);
                 font-size: 2rem;
@@ -107,7 +106,7 @@
                     font-family: var(--mono-font-family);
                     font-size: 1.8rem;
                     font-weight: 500;
-                    opacity: 0.7;
+                    opacity: 0;
                 }
 
                 &:hover,
@@ -119,9 +118,14 @@
 
                 &--active {
                     opacity: 1;
+                    visibility: visible;
                     width: 22rem;
                     height: 3rem;
                     margin-left: 5.2rem;
+
+                    &::placeholder {
+                        opacity: 0.7;
+                    }
                 }
             }
         }
