--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -6,6 +6,11 @@
     --width-mobile: 4rem;
     --expanded-width: 30rem;
 
+    // @include mediaQuery(bp-800) {
+    //     top: 11.2rem;
+    //     left: 1rem;
+    // }
+
     position: fixed;
     top: 0;
     width: 100%;
@@ -31,6 +36,7 @@
         box-shadow: 0 0.5rem 2rem -1.2rem var(--color-primary);
         border: 2px solid var(--color-primary);
         font-size: 2rem;
+        outline: none;
 
         @include mediaQuery(bp-800) {
             height: var(--width-mobile);
@@ -58,6 +64,10 @@
     }
 
     &__form {
+        &__search-container {
+            width: 22px;
+        }
+
         &__search-expand {
             position: relative;
             overflow: hidden;
@@ -89,39 +99,43 @@
             }
 
             &__input {
-                opacity: 0;
-                visibility: hidden;
+                position: absolute;
+                top: 1.8rem;
                 background-color: rgba(0, 0, 0, 0);
                 font-family: var(--mono-font-family);
                 font-size: 2rem;
                 font-weight: 600;
-                outline: 0;
-                border: 0;
                 color: var(--color-white);
                 transition: var(--transition);
                 margin-top: 2px;
-                width: 0;
+                margin-left: 5.2rem;
+                width: 22rem;
+                height: 3rem;
+                @include mediaQuery(bp-800) {
+                    top: 11.2rem;
+                    left: 1rem;
+                }
+                outline: none;
+                border: none;
+                opacity: 0;
+
+                @include mediaQuery(bp-800) {
+                    top: 11.2rem;
+                    left: 1rem;
+                }
 
                 &::placeholder {
                     font-family: var(--mono-font-family);
                     font-size: 1.8rem;
                     font-weight: 500;
+                    color: var(--color-white);
                     opacity: 0;
-                }
-
-                &:hover,
-                &:focus,
-                &:active {
-                    background-color: var(--color-primary-dark);
-                    border: 2px solid var(--color-primary-dark);
                 }
 
                 &--active {
                     opacity: 1;
-                    visibility: visible;
                     width: 22rem;
                     height: 3rem;
-                    margin-left: 5.2rem;
 
                     &::placeholder {
                         opacity: 0.7;
