--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -108,7 +108,8 @@
             width: 15rem;
             height: 6rem;
             letter-spacing: 0.5px;
-            transition: var(--transition) cubic-bezier(0.23, 1, 0.32, 1) 0s;
+            transition: var(--transition);
+            outline: none;
 
             &:hover,
             &:focus {
