--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -12,7 +12,7 @@
     --dashed-line-light: 2px dashed var(--color-white-alternate);
 
     // ANIMATIONS
-    --transition: all 0.3s;
+    --transition: all 0.3s ease;
 
     // BORDER-RADIUS
     --border-radius: 10px;
