--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -18,7 +18,7 @@
     --border-radius: 10px;
 
     // GRID
-    --grid-width: calc(130rem - var(--number-of-columns) * var(--grid-gap));
+    --grid-width: calc(130rem - (var(--number-of-columns) - 1) * var(--grid-gap));
     --number-of-columns: 16;
     --grid-gap: 2rem;
     --grid-gap-mobile: 1.5rem;
