Updated footer styling

--- a/src/components/Spinner/SpinnerStyles.scss
+++ b/src/components/Spinner/SpinnerStyles.scss
@@ -6,6 +6,7 @@
     align-items: center;
 }
 
+// TODO: update spinner color (make whiter?)
 .spinner {
     display: inline-block;
     width: 4.5rem;
