Updated styling and fixed some bugs

--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -14,7 +14,7 @@
 
     position: fixed;
     top: 0;
-    width: 100%;
+    width: min-content;
     display: flex;
     justify-content: left;
     z-index: 3;
