--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -36,7 +36,7 @@
         &__input {
             width: 65rem;
             height: 8rem;
-            margin: 4vh 0 3.2vh 0;
+            margin: 4vh 0;
             padding: 1.5rem;
             font-size: 3rem;
             text-align: center;
