--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -36,7 +36,7 @@
         &__input {
             width: 65rem;
             height: 8rem;
-            margin: 4vh 0;
+            margin: 3.6vh 0 1.5vh;
             padding: 1.5rem;
             font-size: 3rem;
             text-align: center;
@@ -90,7 +90,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 2.2rem;
+            margin-top: 3.2vh;
 
             &--hide {
                 display: none;
